# Matrix

./: CMakeLists.txt  MatrixClass.h  Rational.h  Residue.h  main.cpp  matrix.h  matrix.h~  matrix_public_test.cpp  tests.h
